HAJ-1 initial refactoring commit to solve printing request issue